--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -24,6 +24,9 @@
 }
 .center_text {
 	text-align: center;
+	font-size: 1.9vw;
+	padding: 0.4rem;
+	margin: 0;
 }
 .display_pic {
 	border-radius: 32.8125rem; /* round edges */
